--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@nestjs/bull": "^10.0.1",
+    "@nestjs/cache-manager": "^2.0.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/mapped-types": "*",
@@ -30,9 +31,13 @@
     "@nestjs/typeorm": "^10.0.0",
     "bcrypt": "^5.1.0",
     "bull": "^4.10.4",
+    "cache-manager": "^5.2.3",
+    "cache-manager-redis-store": "^3.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "ioredis": "^5.3.2",
     "mysql2": "^3.4.3",
+    "redis": "^4.6.7",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.17",
@@ -44,6 +49,7 @@
     "@nestjs/testing": "^10.0.0",
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
+    "@types/ioredis": "^5.0.0",
     "@types/jest": "^29.5.2",
     "@types/multer": "^1.4.7",
     "@types/node": "^20.3.1",
